# Clinic-guard-AI

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  setup.py  test_pipeline.py
.github/workflows/: ci.yml  release.yml
audio_files/: .gitkeep
docker/: llama.Dockerfile  whisper.Dockerfile
docs/: DEPLOYMENT.md
models/: .gitkeep
scripts/: generate_test_audio.py
server/: Dockerfile  __init__.py  agent_services.py  db.py  llama_server.py  main.py  pipeline_controller.py  requirements.txt  tts_handler.py  twilio_router.py  utils.py  whisper_server.py
tests/: __init__.py  e2e_test.sh  test_conversation.py  test_memory.py
