[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clinicguard-ai"
dynamic = ["version"]
description = "A HIPAA-compliant AI-powered call handling system for medical clinics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ClinicGuard-AI Team", email = "contact@clinicguard-ai.com"}
]
maintainers = [
    {name = "ClinicGuard-AI Team", email = "contact@clinicguard-ai.com"}
]
keywords = ["healthcare", "ai", "twilio", "voice", "hipaa", "medical", "appointment", "booking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Telephony",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "python-dotenv>=1.0.1",
    "twilio>=8.12.0",
    "python-multipart>=0.0.9",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "aiofiles>=23.2.1",
    "python-magic>=0.4.27",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    "python-socketio>=5.11.1",
    "websockets>=12.0",
    "email-validator>=2.1.0.post1",
    "llama-cpp-python>=0.2.23",
    "openai-whisper>=20231117",
    "numpy>=1.26.3",
    "pyttsx3>=2.90",
    "pydantic>=2.10.3",
    "accelerate>=1.0.1",
    "datasets>=2.14.1",
    "huggingface-hub>=0.23.3",
    "torchaudio>=2.3.1",
    "typing-extensions>=4.12.2",
    "torch>=2.3.1",
    "transformers>=4.38.2",
    "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "bandit>=1.7",
    "safety>=1.10",
]
docker = [
    "docker>=5.0",
]

[project.urls]
Homepage = "https://github.com/Shriiii01/Clinic-guard-AI"
Documentation = "https://github.com/Shriiii01/Clinic-guard-AI/wiki"
Repository = "https://github.com/Shriiii01/Clinic-guard-AI"
"Bug Tracker" = "https://github.com/Shriiii01/Clinic-guard-AI/issues"
"Source Code" = "https://github.com/Shriiii01/Clinic-guard-AI"

[project.scripts]
clinicguard = "server.main:main"

[tool.setuptools_scm]
write_to = "server/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["server"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "llama_cpp_python.*",
    "whisper.*",
    "torch.*",
    "torchaudio.*",
    "transformers.*",
    "accelerate.*",
    "datasets.*",
    "huggingface_hub.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["server"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/venv310/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", "venv310"]
skips = ["B101", "B601"] 